Fix: text alignment for CardMedia component inside ArticleInformation page

--- a/src/pages/ArticleInformation/article-information.scss
+++ b/src/pages/ArticleInformation/article-information.scss
@@ -22,4 +22,8 @@
       text-align: left;
     }
   }
+
+  &__more-articles-card {
+    text-align: left;
+  }
 }
